--- a/css/styles.css
+++ b/css/styles.css
@@ -135,7 +135,7 @@ a {
   padding-bottom: 25px;
 }
 /** Przyciski w Main **/
-.navbutton {
+.portfolio-main__button {
   font-weight: 500;
   line-height: 1.625;
   background-color: #f5f4fa;
@@ -147,8 +147,8 @@ a {
     color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.navbutton:hover,
-.navbutton:focus {
+.portfolio-main__button:hover,
+.portfolio-main__button:focus {
   background-color: var(--focus-active-hovercolor);
   color: var(--darkbd-fontcolor);
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
@@ -426,7 +426,7 @@ a {
   color: var(--focus-active-hovercolor);
   text-decoration: underline;
 }
-.pagenav {
+.portfolio-main__nav{
   list-style: none;
   display: flex;
   justify-content: center;
@@ -446,7 +446,7 @@ a {
 .upper-main {
   background-color: var(--darkbd-fontcolor);
 }
-.pic-title {
+.portfolio-main__pictures__title {
   font-size: 18px;
   font-weight: 700;
   line-height: 2;
@@ -456,33 +456,33 @@ a {
   margin: 0;
 }
 
-.pic-text {
+.portfolio-main__pictures__text {
   line-height: 1.875;
   color: var(--shadowfontcolor);
   background-color: var(--darkbd-fontcolor);
   padding: 20px 24px;
 }
-.pictures {
+.portfolio-main__pictures {
   box-sizing: border-box;
   margin: 0;
   background: var(--darkbd-fontcolor);
   border: 1px solid #eeeeee;
   border-top: none;
 }
-.pictures:hover,
-.pictures:focus {
+.portfolio-main__pictures:hover,
+.portfolio-main__pictures:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
   cursor: pointer;
 }
-.pic-show {
+.portfolio-main__pictures--show {
   position: relative;
   width: 370px;
   height: 294px;
   margin: 0 auto;
   overflow: hidden;
 }
-.pic-overlay {
+.portfolio-main__pictures--overlay {
   position: absolute;
   top: 0;
   left: 0;
@@ -493,10 +493,10 @@ a {
   transform: translatey(100%);
   transition: var(--animation-main);
 }
-.pictures:hover .pic-overlay {
+.portfolio-main__pictures:hover .portfolio-main__pictures--overlay {
   transform: translatex(0);
 }
-.pic-overlay > p {
+.portfolio-main__pictures--overlay > p {
   color: var(--darkbd-fontcolor);
   font-size: 18px;
   padding: 49px 45px 49px 24px;
@@ -649,14 +649,14 @@ a {
   border-radius: 0px 0px 4px 4px;
   margin: 0 15px;
 }
-.pic-box {
+.portfolio-main__boxes {
   display: flex;
   flex-wrap: wrap;
   align-items: center;
   background: var(--darkbd-fontcolor);
   gap: 30px;
 }
-.main-content-color {
+.portfolio-main {
   background: var(--darkbd-fontcolor);
 }
 .lower-main {
