--- a/sass/main.scss
+++ b/sass/main.scss
@@ -646,3 +646,98 @@ a {
   border-color: var(--focus-active-hovercolor);
   cursor: pointer;
 }
+/* Portfolio main content strony */
+.portfolio-main {
+  background: var(--darkbd-fontcolor);
+}
+.portfolio-main__nav{
+  list-style: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
+  margin-bottom: 50px;
+}
+.portfolio-main__button {
+  font-weight: 500;
+  line-height: 1.625;
+  background-color: #f5f4fa;
+  cursor: pointer;
+  border: none;
+  padding: 6px 22px;
+  border-radius: 4px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.portfolio-main__button:hover,
+.portfolio-main__button:focus {
+  background-color: var(--focus-active-hovercolor);
+  color: var(--darkbd-fontcolor);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
+  border-radius: 4px;
+}
+.portfolio-main__boxes {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  background: var(--darkbd-fontcolor);
+  gap: 30px;
+}
+.portfolio-main__pictures {
+  box-sizing: border-box;
+  margin: 0;
+  background: var(--darkbd-fontcolor);
+  border: 1px solid #eeeeee;
+  border-top: none;
+}
+.portfolio-main__pictures:hover,
+.portfolio-main__pictures:focus {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
+  cursor: pointer;
+}
+.portfolio-main__pictures--show {
+  position: relative;
+  width: 370px;
+  height: 294px;
+  margin: 0 auto;
+  overflow: hidden;
+}
+.portfolio-main__pictures--overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #2196f3e5;
+  transform: translatey(100%);
+  transition: var(--animation-main);
+}
+.portfolio-main__pictures:hover .portfolio-main__pictures--overlay {
+  transform: translatex(0);
+}
+.portfolio-main__pictures--overlay > p {
+  color: var(--darkbd-fontcolor);
+  font-size: 18px;
+  padding: 49px 45px 49px 24px;
+  letter-spacing: 0.03em;
+  line-height: 1.55;
+}
+.portfolio-main__pictures__text {
+  line-height: 1.875;
+  color: var(--shadowfontcolor);
+  background-color: var(--darkbd-fontcolor);
+  padding: 20px 24px;
+}
+.portfolio-main__pictures__title {
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 2;
+  letter-spacing: 0.06em;
+  text-align: left;
+  color: var(--mainfontcolor);
+  margin: 0;
+}
